página gratuita exclusiva

--- a/pagina/includes/nav.html
+++ b/pagina/includes/nav.html
@@ -25,6 +25,7 @@
                 </div>
             </div>
 
+            <a href="/pagina/conteudo_gratuito.html" class="text-brand-gold-dark hover:text-brand-gold font-semibold">🎁 Conteúdo Gratuito</a>
             <a href="/sobre-nos" class="text-brand-blue hover:underline">Sobre nós</a>
             <a href="/contato" class="text-brand-blue hover:underline">Contato</a>
         </div>
@@ -37,6 +38,8 @@
                 <span class="block text-brand-blue font-bold py-2">Produtos</span>
                 <a href="/historias_biblicas" class="block text-brand-blue py-2 pl-4">Histórias bíblicas</a>
                 <a href="/ilustracoes_biblicas" class="block text-brand-blue py-2 pl-4">Ilustrações bíblicas</a>
+                <div class="border-t border-gray-200"></div>
+                <a href="/pagina/conteudo_gratuito.html" class="block text-brand-gold-dark font-semibold py-2">🎁 Conteúdo Gratuito</a>
                 <div class="border-t border-gray-200"></div>
                 <a href="/sobre-nos" class="block text-brand-blue py-2">Sobre nós</a>
                 <a href="/contato" class="block text-brand-blue py-2">Contato</a>
